Debugging for milestone 8